# fireauth-templates

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: automated-checks.yml
fireauth_templates/: __init__.py  apps.py  context_processors.py
fireauth_templates/locale/: django.pot
fireauth_templates/locale/de/LC_MESSAGES/: django.po
fireauth_templates/locale/es/LC_MESSAGES/: django.po
fireauth_templates/locale/fr_FR/LC_MESSAGES/: django.po
fireauth_templates/locale/ja/LC_MESSAGES/: django.po
fireauth_templates/locale/ko_KR/LC_MESSAGES/: django.po
fireauth_templates/locale/ru/LC_MESSAGES/: django.po
fireauth_templates/locale/uk/LC_MESSAGES/: django.po
fireauth_templates/locale/zh_Hans/LC_MESSAGES/: django.po
fireauth_templates/static/fireauth_templates/css/: community-app-fixes.css  community-app-fixes.min.css  community-app-fixes.min.css.map  fireauth.css  fireauth.min.css  fireauth.min.css.map
fireauth_templates/static/fireauth_templates/favicons/: browserconfig.xml  site.webmanifest
fireauth_templates/static/fireauth_templates/javascript/: fire-coalition.js  fire-coalition.min.js
fireauth_templates/templates/allianceauth/: base.html  icons.html  top-menu.html
fireauth_templates/templates/blacklist/: base.html  blacklist.html  evenotes.html
fireauth_templates/templates/fireauth/bundles/: community-app-fixes-css.html  fira-code-css.html  fire-coalition-js.html  fireauth-css.html  multiselect-css.html  multiselect-js.html  quicksearch-js.html  slimselect-css.html  slimselect-js.html
fireauth_templates/templates/fireauth/includes/: opengraph-tags.html
fireauth_templates/templates/fittings/: add_doctrine.html  base.html  create_category.html  dashboard.html  edit_category.html  edit_doctrine.html  view_all_categories.html  view_all_fits.html  view_category.html  view_doctrine.html
fireauth_templates/templates/mumbletemps/: link.html
fireauth_templates/templates/public/: base.html  register.html
fireauth_templates/templatetags/: fireauth_template_tags.py
fireauth_templates/tests/: test_templatetags.py
testauth/: local.py  settings.py
