[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "fireauth-templates"
version = "0.0.1"
description = "Alliance Auth Template Overrides for FI.RE Coalition"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "template",
    "template_override",
]
license = {file = "LICENSE"}
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = "~=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3.6.1",
]
[project.urls]
Changelog = "https://github.com/fire-coalition/fireauth-templates/blob/master/CHANGELOG.md"
"Issue / Bug Reports" = "https://github.com/fire-coalition/fireauth-templates/issues"

[tool.hatch.build]
include = [
    "/fireauth_templates",
]
